--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 }
 
 body{
-	background: url('foto/imagen.jpg') no-repeat;
+	background: url('foto/pweb1.jpg') no-repeat;
 	background-size: cover;
-	font-family: 'Century Gothic', sans-serif;
+	font-family: 'verdana', sans-serif;
 }
 .box {
 	width: 500px;
@@ -19,7 +19,7 @@ body{
 	color: white;
 	text-align: center;
 	border-radius: 15px;
-
+	
 }
 .box-img {
 	border-radius: 50%;
@@ -30,7 +30,7 @@ body{
 	font-weight: 100;
 	margin:30px 0 20px;
 }
-.boxh2{
+.box h2{
 	font-size: 20px;
 	letter-spacing: 3px;
 	font-weight: 100;
