--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 .box {
 	width: 500px;
-	background: rgba(0,0,0,.4);
+	background: rgba(0,0,0,0.4);
 	margin:0 auto;
 	margin-top: 4%;
 	padding: 20px;
@@ -35,4 +35,123 @@ body{
 	letter-spacing: 3px;
 	font-weight: 100;
 
+}
+
+
+form
+{
+	width: 450px;
+	margin: auto;
+	background: rgba(0, 0, 0,0.4);
+	padding: 10px 20px;
+	box-sizing: border-box;
+	margin-top: 200px;
+	border-radius: 7px;
+}
+h2
+{
+	color: #fff;
+	text-align: center;
+	margin: 0;
+	font-size: 30px;
+	margin-bottom: 20px;
+	letter-spacing: 3px;
+	font-weight: 100;
+}
+input, textarea
+{
+	width: 100%;
+	margin-bottom: 20px;
+	padding: 7px;
+	box-sizing: border-box;
+	font-size: 17px;
+	border: none;
+}
+textarea
+{
+	min-height: 100px;
+	max-height: 200px;
+	max-width: 100%;
+}
+#boton
+{
+	background: #2a2556;
+	color: #fff;
+	padding: 20px;
+	letter-spacing: 3px;
+}
+#boton:hover
+{
+	cursor: pointer;
+}
+@media(max-width: 480)
+{
+
+}
+
+
+h3
+{
+	padding-top: 200px;
+	color: #fff;
+	text-align: center;
+	margin: auto;
+	font-size: 25px;
+	letter-spacing: 3px;
+	font-weight: 100px;
+
+}
+.conteiner
+{
+	height: 200px;
+	width: 100px;
+	max-width: 1000px;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+
+}
+
+.table
+{
+	width: 50%;
+	height: 10px;
+	margin: auto;
+	border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0px 0px 4px 0px #ccc;
+    padding: 10px;
+}
+.table tr
+{	
+	background-color: white;
+	border: 1px solid black;
+	width: 100px;
+}
+.table td 
+{
+    font-size: 16px;
+    padding: 8px;
+    text-align: center;
+
+}
+}
+.table thead th
+{
+	width: 100px;
+	text-transform: uppercase;
+    background-color: white;
+}
+.table tbody tr:hover
+{
+	background-color: rgba(0, 0, 0, 0.2);
+}
+.table tbody tr:hover
+{
+	background-color: rgba(0, 0, 0, 0.3);
+}
+{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
